--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,4 +4,15 @@
 
 body {
   @apply bg-black text-slate-100;
+
+  overscroll-behavior: none;
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body ::-webkit-scrollbar {
+  display: none;
 }
